@@ -1,4 +1,4 @@
-# $NetBSD: buildlink2.mk,v 1.4 2003/08/22 16:14:17 seb Exp $
+# $NetBSD: buildlink2.mk,v 1.5 2003/08/27 15:33:33 abs Exp $
 #
 # This Makefile fragment is included by packages that use librsync.
 #
@@ -15,6 +15,7 @@ BUILDLINK_PKGSRCDIR.librsync?=		../../devel/librsync
 EVAL_PREFIX+=	BUILDLINK_PREFIX.librsync=librsync
 BUILDLINK_PREFIX.librsync_DEFAULT=	${LOCALBASE}
 BUILDLINK_FILES.librsync+=	include/librsync*.h
+BUILDLINK_FILES.librsync+=	include/librsync-config.h
 BUILDLINK_FILES.librsync+=	lib/librsync.*
 
 .include "../../archivers/bzip2/buildlink2.mk"
